<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPurple"
    android:orientation="vertical"
    tools:context=".Signup_Form">

    <LinearLayout
        android:id="@+id/sliderDotsPanel"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/colorPurple"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="15dp"
            android:text="Register New Account"
            android:textColor="@color/colorPink"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sliderDotsPanel"
        app:layout_constraintVertical_bias="0.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="401dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPurple"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sliderDotsPanel"
                app:layout_constraintVertical_bias="0.0">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/ic_camera_alt_black_24dp" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Full Name:"
                    android:textColor="@color/colorPink"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_account_circle_pink"
                    android:textColor="@color/colorPink"
                    android:drawableRight="@drawable/ic_asterick" />


                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Email:"
                    android:textColor="@color/colorPink"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_email_pink"
                    android:textColor="@color/colorPink"
                    android:drawableRight="@drawable/ic_asterick" />


                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Password (between 6 and 20 chars):"
                    android:textColor="@color/colorPink"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_key_pink"
                    android:textColor="@color/colorPink"
                    android:drawableRight="@drawable/ic_asterick" />


                <TextView
                    android:id="@+id/tvConPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Confirm password:"
                    android:textColor="@color/colorPink"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etConpassword"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_key_pink"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPink"
                    android:drawableRight="@drawable/ic_asterick" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Phone:"
                    android:textColor="@color/colorPink"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPink"
                    android:drawableStart="@drawable/ic_phone_pink"
                    android:drawableRight="@drawable/ic_asterick" />


                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Address:"
                    android:textColor="@color/colorPink"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18dp"
                    android:drawableStart="@drawable/ic_location"
                    android:textColor="@color/colorPink"
                    android:drawableRight="@drawable/ic_asterick" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:background="@color/colorPink"
                    android:text="Register"
                    android:textColor="#fff" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Already Have an Account? "
                        android:textColor="@color/colorPink"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/tvLoginLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/colorPink"
                        android:text="Login Here"
                        android:textColor="#fff"
                        android:textSize="15dp"
                        android:textStyle="italic" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
